# talky

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  LICENSE  MAGIC-MERGE.md  README.md  RELEASE_GUIDE.md  SECURITY.md  fix_json.cjs  index.html  install.ps1  install.sh  package.json  tailwind.config.js  vite.config.ts
.AI/: EVAL_REVIEW_GUIDE.md  compare.mts  eval.mts  new-variant.sh  promptfooconfig.yaml  review.mts  summarize-results.mjs
.AI/providers/: talky.mjs
.AI/scorers/: judge.mjs
.AI/tests/: cases.mjs
.github/workflows/: build-test.yml  build.yml  pr-test-build.yml  release.yml
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  macos-only.json
src-tauri/icons/: icon.icns
src-tauri/resources/: default_settings.json
src-tauri/resources/prompts/: enhance_notes.txt  enhance_notes_user.txt
src-tauri/src/: actions.rs  apple_intelligence.rs  audio_feedback.rs  lib.rs  llm_client.rs  main.rs  menu.rs  mic_detect.rs  platform.rs  power_events.rs  settings.rs  tray.rs  utils.rs
src-tauri/src/aec/: error.rs  mod.rs  model.rs
src-tauri/src/audio_toolkit/: mod.rs  pipeline.rs  preprocessing.rs  text.rs
src-tauri/src/audio_toolkit/audio/: recorder.rs
src-tauri/src/audio_toolkit/speaker/: macos.rs  mod.rs  windows.rs
src-tauri/src/audio_toolkit/vad/: mod.rs  silero.rs
src-tauri/src/commands/: audio.rs  export.rs  history.rs  mod.rs  session.rs  settings.rs
src-tauri/src/managers/: audio.rs  history.rs  mod.rs  model.rs  session.rs  transcription.rs
src-tauri/src/shortcut/: handler.rs  mod.rs
src/components/: NotesSidebar.tsx  RecordingPill.tsx  SettingsPage.tsx  Sidebar.tsx
src/components/footer/: Footer.tsx
src/components/icons/: TalkyFeather.tsx  TalkyHand.tsx  TalkyTextLogo.tsx  index.ts
src/components/model-selector/: ModelDropdown.tsx  ModelSelector.tsx  ModelStatusButton.tsx
src/components/onboarding/: AccessibilityOnboarding.tsx  ModelCard.tsx  Onboarding.tsx  PermissionsOnboarding.tsx  index.ts
src/components/sessions/: AiSourceExtension.ts  AttachmentsRow.tsx  ChatDrawer.tsx  FindBar.tsx  NoteView.tsx  NotesEditor.tsx  SessionsView.tsx  notes-editor.css
src/components/settings/: ChatSettings.tsx  CustomWords.tsx  FontSizeSetting.tsx  ShortcutInput.tsx  UserDataDirectory.tsx  index.ts
src/components/settings/PostProcessingSettingsApi/: ModelSelect.tsx  index.tsx  (+1 more)
src/components/ui/: ConfirmDialog.tsx  Dropdown.tsx  ExportDialog.tsx  Select.tsx  SettingContainer.tsx  SettingsGroup.tsx  Textarea.tsx  ToggleSwitch.tsx  WaveformBars.tsx  index.ts
src/components/update-checker/: UpdateBanner.tsx  UpdateChecker.tsx  index.ts
src/hooks/: useEffectiveEnvironment.ts  useGlobalChat.ts  useKeyboardShortcuts.ts  useNoteChat.ts  usePlatformCapabilities.ts  useSettings.ts
src/stores/: organizationStore.ts  sessionStore.ts  settingsStore.ts
src/utils/: markdownParser.ts
(+30 files in other folders)
