[package]
name = "talky"
version = "0.7.0"
description = "Talky"
authors = ["The user Mair"]
edition = "2021"
license = "MIT"
default-run = "talky"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "talky_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [[bin]]
# name = "cli"
# path = "src/audio_toolkit/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[features]
skip-apple-intelligence = []

[dependencies]
once_cell = "1"
tauri = { version = "2.10", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  'image-png',
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2.6"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-process = "2.3.1"
rusqlite_migration = "2.3"
tauri-plugin-fs = "2.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16.0"
anyhow = "1.0.95"
rubato = "0.16.2"
hound = "3.5.1"
log = "0.4.25"
env_filter = "0.1.0"
tokio = "1.43.0"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
rodio = { git = "https://github.com/cjpais/rodio.git" }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
rustfft = "6.4.0"
ringbuf = "0.4"
uuid = { version = "1", features = ["v4"] }
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
tar = "0.4.44"
flate2 = "1.0"
transcribe-rs = { version = "0.2.2", features = ["whisper", "parakeet"] }
ferrous-opencc = "0.2.3"
ort = { version = "=2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.16"
realfft = "3.5.0"
thiserror = "2"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.13", features = ["av"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSRunLoop", "NSString", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
block2 = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
